--- a/k8s/account-db/deployment.yaml
+++ b/k8s/account-db/deployment.yaml
@@ -24,3 +24,11 @@ spec:
           value: "postgres"
         - name: POSTGRES_PASSWORD
           value: "password"
+        volumeMounts:
+        - name: init-script
+          mountPath: /docker-entrypoint-initdb.d
+      volumes:
+      - name: init-script
+        configMap:
+          name: account-db-init
+
