feat: add configmap for order-db

--- a/k8s/order-db/deployment.yaml
+++ b/k8s/order-db/deployment.yaml
@@ -24,3 +24,10 @@ spec:
           value: "postgres"
         - name: POSTGRES_PASSWORD
           value: "password"
+        volumeMounts:
+        - name: init-script
+          mountPath: /docker-entrypoint-initdb.d
+      volumes:
+      - name: init-script
+        configMap:
+          name: order-db-init
