--- a/k8s/order-db/deployment.yaml
+++ b/k8s/order-db/deployment.yaml
@@ -21,9 +21,15 @@ spec:
         - name: POSTGRES_DB
           value: "gocore"
         - name: POSTGRES_USER
-          value: "postgres"
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: postgres-user
         - name: POSTGRES_PASSWORD
-          value: "password"
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: postgres-password
         volumeMounts:
         - name: init-script
           mountPath: /docker-entrypoint-initdb.d
