--- a/k8s/order/deployment.yaml
+++ b/k8s/order/deployment.yaml
@@ -19,8 +19,22 @@ spec:
         ports:
         - containerPort: 8083
         env:
-        - name: DATABASE_URL
-          value: "postgres://postgres:password@order-db:5432/gocore?sslmode=disable"
+        - name: DB_HOST
+          value: "order-db"
+        - name: DB_PORT
+          value: "5432"
+        - name: DB_NAME
+          value: "gocore"
+        - name: DB_USER
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: postgres-user
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: postgres-password
         - name: ACCOUNT_SERVICE_URL
           value: "account-service:8081"
         - name: PRODUCT_SERVICE_URL
