--- a/k8s/account-db/deployment.yaml
+++ b/k8s/account-db/deployment.yaml
@@ -17,6 +17,27 @@ spec:
         image: postgres:15
         ports:
         - containerPort: 5432
+        readinessProbe:
+          exec:
+            command:
+            - pg_isready
+            - -U
+            - $(POSTGRES_USER)
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          timeoutSeconds: 3
+          failureThreshold: 3
+          successThreshold: 1
+        livenessProbe:
+          exec:
+            command:
+            - pg_isready
+            - -U
+            - $(POSTGRES_USER)
+          initialDelaySeconds: 30
+          periodSeconds: 30
+          timeoutSeconds: 5
+          failureThreshold: 3
         env:
         - name: POSTGRES_DB
           value: "gocore"
