--- a/k8s/account/service.yaml
+++ b/k8s/account/service.yaml
@@ -6,5 +6,9 @@ spec:
   selector:
     app: account
   ports:
-  - port: 8081
+  - name: grpc
+    port: 8081
     targetPort: 8081
+  - name: health
+    port: 8080
+    targetPort: 8080
