--- a/k8s/product-db/deployment.yaml
+++ b/k8s/product-db/deployment.yaml
@@ -17,6 +17,23 @@ spec:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.17.13
         ports:
         - containerPort: 9200
+        readinessProbe:
+          httpGet:
+            path: /_cluster/health?wait_for_status=yellow&timeout=1s
+            port: 9200
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+          successThreshold: 1
+        livenessProbe:
+          httpGet:
+            path: /_cluster/health?wait_for_status=yellow&timeout=1s
+            port: 9200
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          timeoutSeconds: 10
+          failureThreshold: 3
         env:
         - name: discovery.type
           value: "single-node"
