--- a/k8s/account-db/deployment.yaml
+++ b/k8s/account-db/deployment.yaml
@@ -20,9 +20,9 @@ spec:
         readinessProbe:
           exec:
             command:
-            - pg_isready
-            - -U
-            - $(POSTGRES_USER)
+            - sh
+            - -c
+            - pg_isready -U "$POSTGRES_USER"
           initialDelaySeconds: 5
           periodSeconds: 10
           timeoutSeconds: 3
@@ -31,13 +31,20 @@ spec:
         livenessProbe:
           exec:
             command:
-            - pg_isready
-            - -U
-            - $(POSTGRES_USER)
+            - sh
+            - -c
+            - pg_isready -U "$POSTGRES_USER"
           initialDelaySeconds: 30
           periodSeconds: 30
           timeoutSeconds: 5
           failureThreshold: 3
+        lifecycle:
+          preStop:
+            exec:
+              command:
+              - sh
+              - -c
+              - pg_ctl stop -D /var/lib/postgresql/data -m fast -w || true
         env:
         - name: POSTGRES_DB
           value: "gocore"
@@ -54,8 +61,14 @@ spec:
         volumeMounts:
         - name: init-script
           mountPath: /docker-entrypoint-initdb.d
+        - name: postgres-storage
+          mountPath: /var/lib/postgresql/data
       volumes:
       - name: init-script
         configMap:
           name: account-db-init
+      - name: postgres-storage
+        persistentVolumeClaim:
+          claimName: account-db-pvc
+
 
