--- a/k8s/product-db/deployment.yaml
+++ b/k8s/product-db/deployment.yaml
@@ -34,6 +34,9 @@ spec:
           periodSeconds: 30
           timeoutSeconds: 10
           failureThreshold: 3
+        volumeMounts:
+        - name: elasticsearch-data
+          mountPath: /usr/share/elasticsearch/data
         env:
         - name: discovery.type
           value: "single-node"
@@ -46,3 +49,7 @@ spec:
             memory: "1Gi"
           limits:
             memory: "1Gi"
+      volumes:
+      - name: elasticsearch-data
+        persistentVolumeClaim:
+          claimName: product-db-pvc
