feat: add resource scheduling in services

--- a/k8s/account-db/deployment.yaml
+++ b/k8s/account-db/deployment.yaml
@@ -70,5 +70,13 @@ spec:
       - name: postgres-storage
         persistentVolumeClaim:
           claimName: account-db-pvc
+      resources:
+        requests:
+          cpu: "200m"
+          memory: "512Mi"
+        limits:
+          cpu: "500m"
+          memory: "1Gi"
+
 
 
