--- a/k8s/product-db/deployment.yaml
+++ b/k8s/product-db/deployment.yaml
@@ -53,3 +53,11 @@ spec:
       - name: elasticsearch-data
         persistentVolumeClaim:
           claimName: product-db-pvc
+      resources:
+        requests:
+          cpu: "500m"
+          memory: "1Gi"
+        limits:
+          cpu: "1"
+          memory: "2Gi"
+
