--- a/k8s/account/deployment.yaml
+++ b/k8s/account/deployment.yaml
@@ -43,6 +43,13 @@ spec:
             port: liveness-port
           failureThreshold: 30
           periodSeconds: 10
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "300m"
+            memory: "256Mi"
         env:
         - name: DB_HOST
           value: "account-db"
