--- a/k8s/order/deployment.yaml
+++ b/k8s/order/deployment.yaml
@@ -20,6 +20,13 @@ spec:
         - containerPort: 8083
         - name: liveness-port
           containerPort: 8080
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "300m"
+            memory: "256Mi"
         env:
         - name: DB_HOST
           value: "order-db"
